# client-java

./: .gitignore  CMakeLists.txt  README.md  build-all.bat  build-all.sh  conanfile.py  pom.xml  virtru.i  wait-and-test.sh
.github/workflows/: build.yml
docker/linux-arm/: deploy.sh  install_req.sh
docker/ubuntu-18-04-arch64/: run-ubuntu-18-04-arch64.sh
docker/ubuntu-18-04-arch64/src/: Dockerfile
examples/: Makefile  sample.java
multi/: build-multi-sdk.sh  pom.xml  settings.xml
native-linux_64/: pom.xml
native-osx_64/: pom.xml
native-win_64/: pom.xml
smoketest/: virtru_test.java
src/: CMakeLists.txt  Makefile.manual  pom.xml
